--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,19 @@
-# Expo CLI .gitignore:
-node_modules/**/*
-.expo/*
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+build/
 
-# Comprehensive .gitignore:
+### Linux template
+*~
 
-### macOS template
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
 
-# Icon must end with two \r
-Icon
+# KDE directory preferences
+.directory
 
-# Thumbnails
-._*
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -139,20 +114,33 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-### Linux template
-*~
+### macOS template
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
+# Icon must end with two \r
+Icon
 
-# KDE directory preferences
-.directory
+# Thumbnails
+._*
 
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
 
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
 ### Node template
 # Logs
